--- a/gb-web/package.json
+++ b/gb-web/package.json
@@ -28,6 +28,8 @@
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.13",
     "react-throttle": "^0.3.0",
+    "react-window-dimensions": "^1.0.1",
+    "react-window-size": "^1.0.1",
     "sass-loader": "^6.0.6",
     "tachyons": "4.9.1"
   },
